--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -29,7 +29,7 @@
       
       <p>
       Grounds strives to use the latest stable release of each supported language. If you find
-      that your favorite language is not up to date, you are welcome to open an issue on
+      that your favorite language is not up to date, you are welcomed to open an issue on
       <a href="https://github.com/grounds/grounds.io/issues/new">GitHub</a>.
       </p>
       <p>
