cleanses html markup

--- a/app/assets/stylesheets/ground.css.scss
+++ b/app/assets/stylesheets/ground.css.scss
@@ -1,18 +1,17 @@
-$ground-buffer: rem-calc(20);
-$ground-primary-color: #f2f2f2;
-$ground-primary-light-color: adjust-color($ground-primary-color, $lightness: 5%);
-$ground-primary-hover-color: adjust-color($ground-primary-color, $lightness: -15%);
-$ground-primary-active-color: adjust-color($ground-primary-color, $lightness: -25%);
-$ground-error-color: #c60f13;
-$ground-border-color: #DDD;
-$ground-font-color: #333;
-$ground-link-color: #4183c4;
-$ground-link-hover-color: #4183c4;
+$buffer: rem-calc(20);
+$primary-color: #f2f2f2;
+$primary-light-color: adjust-color($primary-color, $lightness: 5%);
+$primary-hover-color: adjust-color($primary-color, $lightness: -15%);
+$primary-active-color: adjust-color($primary-color, $lightness: -25%);
+$error-color: #c60f13;
+$border-color: #DDD;
+$font-color: #333;
+$link-hover-color: #4183c4;
 
-.top-buffer    { margin-top:    $ground-buffer }
-.bottom-buffer { margin-bottom: $ground-buffer }
+.top-buffer    { margin-top:    $buffer }
+.bottom-buffer { margin-bottom: $buffer }
 
-@mixin border($sides: left top right bottom, $width: 1px, $color: $ground-border-color, $style: solid) {
+@mixin border($sides: left top right bottom, $width: 1px, $color: $border-color, $style: solid) {
   @each $side in $sides {
     border-#{$side}: $width $color $style;
   }
@@ -20,26 +19,26 @@ $ground-link-hover-color: #4183c4;
 
 a {
   @extend a;
-  color: $ground-link-hover-color;
+  color: $link-hover-color;
   
   &:hover {
-    color: adjust-color($ground-link-hover-color, $lightness: 8%);
+    color: adjust-color($link-hover-color, $lightness: 8%);
   }
 }
 
 .menu-link {
-  color: $ground-font-color;
+  color: $font-color;
   
   &:hover {
-    color: $ground-link-hover-color;
+    color: $link-hover-color;
   }
   &:focus {
-    color: $ground-link-hover-color;
+    color: $link-hover-color;
   }
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color: $ground-font-color;
+  color: $font-color;
 }
 
 .inline-list {
@@ -61,26 +60,26 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0;
   
   &:hover {
-    background-color: $ground-primary-hover-color;
+    background-color: $primary-hover-color;
   }
   &:focus {
-    background-color: $ground-primary-active-color;
+    background-color: $primary-active-color;
   }
 }
 
 .dropdown {
   @extend .button;
-  background-color: $ground-primary-light-color;
-  color: $ground-font-color;
+  background-color: $primary-light-color;
+  color: $font-color;
   &.tiny {
     &:after {
-      border-color: $ground-font-color transparent transparent transparent;
+      border-color: $font-color transparent transparent transparent;
     }
   }
 }
 
 .editor-header {
-  background-color: $ground-primary-color;
+  background-color: $primary-color;
   border-radius: 3px 3px 0 0;
   padding: rem-calc(10) rem-calc(10);
   @include border(left top right);
@@ -95,13 +94,13 @@ h1, h2, h3, h4, h5, h6 {
 
 .contain-to-grid {
   @extend .contain-to-grid;
-  background-color: $ground-primary-color;
+  background-color: $primary-color;
   @include border(bottom);
 }
 
 .top-bar {
   @extend .top-bar;
-  background-color: $ground-primary-color;
+  background-color: $primary-color;
   padding-bottom: 1px;
 
   .name h1 a {
@@ -109,7 +108,7 @@ h1, h2, h3, h4, h5, h6 {
   }
 
   .top-bar-section li:not(.has-form) a:not(.button) {
-    background-color: $ground-primary-color;
+    background-color: $primary-color;
     @extend .menu-link;
   }
 }
@@ -118,21 +117,14 @@ h1, h2, h3, h4, h5, h6 {
   @extend .panel;
   
   .waiting {
-    color: $ground-link-hover-color;
+    color: $link-hover-color;
   }
   .stderr {
-    color: $ground-error-color;
+    color: $error-color;
   }
   .status {
     color: green;
   }
-}
-
-.fullwidth {
-   width: 100%;
-   margin-left: auto;
-   margin-right: auto;
-   max-width: initial;
 }
 
 $footer-height: rem-calc(125);
@@ -157,7 +149,7 @@ body {
 
 #footer {
     height: $footer-height;
-    background-color: $ground-primary-color;
+    background-color: $primary-color;
     @include border(top);
     
     a {
@@ -167,7 +159,7 @@ body {
 
 .footer-text {
   font-size: rem-calc(12);
-  color: $ground-font-color;
+  color: $font-color;
   
   .icon-heart {
     color: red;
@@ -176,6 +168,6 @@ body {
 
 .circle-img {
   border-radius: 50%;
-  box-shadow: 0 0 0 1px $ground-border-color;
-  @include border($width: 5px, $color: $ground-primary-color);
+  box-shadow: 0 0 0 1px $border-color;
+  @include border($width: 5px, $color: $primary-color);
 }
