--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
-<div class="fixed contain-to-grid">
+<div class="contain-to-grid fixed">
 
-  <nav class="top-bar" data-topbar>
+  <nav class="top-bar" data-topbar role="navigation">
 
     <ul class="title-area">
 
