--- a/app/views/grounds/_option_dropdown.html.erb
+++ b/app/views/grounds/_option_dropdown.html.erb
@@ -1,5 +1,10 @@
 <a href="#" data-dropdown="<%= "#{option}-dropdown" %>" class="tiny radius dropdown">
-  <%= t("editor.select.#{option}") %> <b id="<%= option %>-name" ><%= @ground.selected_label(option) %></b></a>
+  
+  <%= t("editor.select.#{option}") %>
+  
+  <b id="<%= option %>-name" ><%= @ground.selected_label(option) %></b>
+  
+</a>
 
 <ul id=<%= "#{option}-dropdown" %> data-dropdown-content class="f-dropdown">
 
