--- a/app/assets/stylesheets/ground.css.scss
+++ b/app/assets/stylesheets/ground.css.scss
@@ -53,8 +53,14 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+.rounded {
+  @extend .radius;
+}
+
 .button {
   @extend .button.secondary;
+  @extend .rounded;
+
   @include border;
 
   margin: 0;
@@ -65,6 +71,11 @@ h1, h2, h3, h4, h5, h6 {
   &:focus {
     background-color: $primary-active-color;
   }
+}
+
+.button {
+  @extend .button;
+  @extend .tiny;
 }
 
 .dropdown {
@@ -78,7 +89,11 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-.editor-header {
+.dropdown-items {
+  @extend .f-dropdown;
+}
+
+.editor-heading {
   background-color: $primary-color;
   border-radius: 3px 3px 0 0;
   padding: rem-calc(10) rem-calc(10);
@@ -86,20 +101,31 @@ h1, h2, h3, h4, h5, h6 {
 }
   
 
-.code-editor {
+.editor-body {
   height: rem-calc(400);
   border-radius: 0 0 3px 3px; 
   @include border;
 }
 
-.contain-to-grid {
+.row {
+  @extend .row;
+}
+
+.spaced-row {
+  @extend .row;
+  @extend .top-buffer;
+}
+
+.grid-sized {
   @extend .contain-to-grid;
   background-color: $primary-color;
   @include border(bottom);
 }
 
-.top-bar {
+.header {
   @extend .top-bar;
+  @extend .hide-for-small;
+
   background-color: $primary-color;
   padding-bottom: 1px;
 
@@ -107,15 +133,52 @@ h1, h2, h3, h4, h5, h6 {
     @extend .menu-link;
   }
 
-  .top-bar-section li:not(.has-form) a:not(.button) {
+  .header-section li:not(.has-form) a:not(.button) {
     background-color: $primary-color;
     @extend .menu-link;
   }
 }
 
+.header-section {
+  @extend .top-bar-section;
+}
+
+.header-small {
+  @extend .tab-bar;
+  @extend .show-for-small;
+
+  background-color: $primary-color;
+  
+  h1 a {
+    @extend .menu-link;
+    
+    font-weight: normal;
+    font-size: rem-calc(16);
+  }
+  
+  .menu-icon span::after {
+    box-shadow: 0 0px 0 1px $primary-hover-color, 
+                0 7px 0 1px $primary-hover-color,
+                0 14px 0 1px $primary-hover-color;
+  }
+
+  @include border(bottom);
+}
+
+
+
+.left-small {
+  @extend .left-small;
+  
+  @include border(right);
+}
+
 .console {
   @extend .panel;
-  
+  @extend .row;
+  @extend .rounded;
+  @extend .top-buffer;
+
   .waiting {
     color: $link-hover-color;
   }
@@ -136,14 +199,14 @@ body {
   padding: 0px;
 }
 
-#wrapper {
+.content-wrap {
     min-height: 100%;
     height: auto !important;
     height: 100%;
     margin: 0 auto ($footer-height * -1);
 }
 
-#wrapper > *:last-child {
+.content-wrap > *:last-child {
     padding-bottom: $footer-height + rem-calc(20);
 }
 
@@ -154,16 +217,28 @@ body {
     
     a {
       @extend .menu-link;  
+      
+      color: $link-hover-color;
+  
+      &:hover {
+        color: $font-color;
+      }
+      &:focus {
+        color: $font-color;
+      }
     }
 }
 
 .footer-text {
-  font-size: rem-calc(12);
   color: $font-color;
   
   .icon-heart {
     color: red;
   }
+  .inline-list {
+    font-size: rem-calc(12);
+  }
+  
 }
 
 .circle-img {
