--- a/app/views/grounds/show.html.erb
+++ b/app/views/grounds/show.html.erb
@@ -9,35 +9,39 @@
 
 <% end %>
 
-<div class="row editor-header">
+<div class="row">
 
-  <%= render 'option_dropdown', option: :language %>
-
-  <%= render 'option_dropdown', option: :theme %>
-
-  <%= render 'option_dropdown', option: :indent %>
-
-  <%= render 'option_dropdown', option: :keyboard %>
-
-  <%= button_tag(type: 'button', id: :share, class: 'tiny button radius') do
-    content_tag(:strong, fa_icon('share', text: t('editor.share')))
-  end %>
+  <div class="editor-heading">
+  
+    <%= render 'option_dropdown', option: :language %>
+  
+    <%= render 'option_dropdown', option: :theme %>
+  
+    <%= render 'option_dropdown', option: :indent %>
+  
+    <%= render 'option_dropdown', option: :keyboard %>
+  
+    <%= button_tag(type: 'button', id: :share, class: 'button') do
+      content_tag(:strong, fa_icon('share', text: t('editor.share')))
+    end %>
+  
+  </div>
+  
+  <%= content_tag(:div, @ground.code, id: :ground_editor, class: 'editor-body', data: @ground.editor) %>
 
 </div>
 
-<%= content_tag(:div, @ground.code, id: :ground_editor, class: 'row code-editor', data: @ground.editor) %>
+<div class="spaced-row">
 
-<div class="row top-buffer">
-
-  <input name="sharedURL" type="text" id="sharedURL" class="radius">
+  <input name="sharedURL" type="text" id="sharedURL" class="rounded">
   
-  <%= button_tag(type: 'button', id: :run, class: 'tiny button radius') do
+  <%= button_tag(type: 'button', id: :run, class: 'button') do
     content_tag(:strong, fa_icon('play', text: t('editor.run')))
   end %>
 
 </div>
 
-<div class="row console radius top-buffer">
+<div class="console">
 
   <h6><%= fa_icon('terminal', text: t('editor.console')) %></h6>
 
@@ -49,9 +53,9 @@
 
 </div>
 
-<div class="row top-buffer">
+<div class="spaced-row">
 
-  <%= button_tag(type: 'button', id: :back, class: 'tiny button radius') do
+  <%= button_tag(type: 'button', id: :back, class: 'button') do
     content_tag(:strong, fa_icon('long-arrow-up', text: t('editor.back')))
   end %>
 
