--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,7 +16,7 @@
 
       <ul class="right">
         
-        <%= render 'layouts/links' %>
+        <%= render 'layouts/menu_links' %>
 
       </ul>
 
@@ -33,8 +33,8 @@
     <a class="left-off-canvas-toggle menu-icon" href="#"><span></span></a>
 
   </section>
-   
-  <section class="middle tab-bar-section">
+
+  <section class="header-small-section">
 
     <h1 class="title"><%= link_to(fa_icon('code', text: t('site.title')), root_path) %></h1>
 
