--- a/app/views/layouts/_sidemenu.html.erb
+++ b/app/views/layouts/_sidemenu.html.erb
@@ -4,7 +4,7 @@
 
     <li><label><%= t('site.title') %></label></li>
 
-    <%= render 'layouts/links' %>
+    <%= render 'layouts/menu_links' %>
 
   </ul>
 
