refactors some tests

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,3 +1,4 @@
+<%# Will not be render on small screens %>
 <div class="grid-sized">
 
   <nav class="header" data-topbar role="navigation">
@@ -26,6 +27,7 @@
 
 </div>
 
+<%# Will be render only on small screens %>
 <nav class="header-small">
 
   <section class="left-small">
