--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,12 +1,12 @@
-<div class="footer-text top-buffer">
+<div class="footer-content">
 
-  <div class="row text-center">
+  <div class="footer-title">
   
     <p>MADE WITH <%= fa_icon('heart', class: 'icon-heart') %> IN PARIS</p>
   
   </div>
   
-  <ul class="inline-list">
+  <ul class="footer-links">
   
     <li><%= t('site.copyright') %></li>
   
