--- a/app/views/grounds/show.html.erb
+++ b/app/views/grounds/show.html.erb
@@ -23,7 +23,7 @@
   
   </div>
   
-  <%= content_tag(:div, @ground.code, id: :ground_editor, class: 'editor-body', data: @ground.editor) %>
+  <%= content_tag(:div, @ground.code, id: :ground_editor, class: 'editor-body', data: @ground.data_attributes) %>
 
 </div>
 
