--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -11,15 +11,11 @@
     <li><%= t('site.copyright') %></li>
   
     <li>
-      <%= link_to('https://github.com/grounds/grounds.io/issues/new', target: '_blank') do 
-        content_tag(:span, fa_icon('envelope-o', text: t('site.contact')))
-      end %>
+      <%= link_to(t('site.contact'), 'https://github.com/grounds/grounds.io/issues/new', target: '_blank') %>
     </li>
     
     <li>
-      <%= link_to('https://github.com/grounds', target: '_blank') do 
-        content_tag(:span, fa_icon('github', text: t('site.sources')))
-      end %>
+      <%= link_to(t('site.sources'), 'https://github.com/grounds', target: '_blank') %>
     </li>
     
     <li><%= link_to(t('site.about'), page_path('about')) %></li>
