--- a/app/views/layouts/_menu_links.html.erb
+++ b/app/views/layouts/_menu_links.html.erb
@@ -1,3 +1,5 @@
+<li><%= link_to(t('site.status'), 'http://status.42grounds.io', target: '_blank') %></li>
+
 <li><%= link_to(t('site.about'), page_path('about')) %></li>
 
 <li>
