add node.js support

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -20,7 +20,7 @@
         </li>
         
         <li>
-          Grounds doesn't support HTML, CSS and Javascript, and there is no plan to do it
+          Grounds doesn't support HTML, CSS and client-side Javascript, and there is no plan to do it
           in the future. Checkout the awesome <%= link_to('JS Fiddle', 'http://jsfiddle.net/', target: '_blank') %> for that.
         </li>
 
