fix about page, and remove status page target blank

--- a/app/views/layouts/_menu_links.html.erb
+++ b/app/views/layouts/_menu_links.html.erb
@@ -1,4 +1,4 @@
-<li><%= link_to(t('site.status'), 'http://status.42grounds.io', target: '_blank') %></li>
+<li><%= link_to(t('site.status'), 'http://status.42grounds.io') %></li>
 
 <li><%= link_to(t('site.about'), page_path('about')) %></li>
 
