--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -5,7 +5,8 @@
   <div class="medium-panel">
 
     <p>
-    Grounds receives a program, compiles and runs the program inside a docker container, 
+    Grounds receives a program, compiles and runs the program inside a 
+    <%= link_to('Docker', 'http://docker.com/', target: '_blank') %> container, 
     and returns the output. Each container is destroyed after a run.
     </p>
     
