changes run output builder

--- a/app/views/grounds/show.html.erb
+++ b/app/views/grounds/show.html.erb
@@ -45,8 +45,11 @@
 
   <pre id="connect_error" class="stderr" hidden="true"><%= t('editor.error.connect') %></pre>
 
-  <pre id="output"></pre>
-
+  <div id="output">
+    <pre class="stdout"></pre>
+    <pre class="stderr"></pre>
+    <pre class="status"></pre>
+  </div>
 </div>
 
 <div class="spaced-row">
