Fixes output builder
Verify also that code printing html/xml content is not interpreted
client side.

--- a/app/views/grounds/show.html.erb
+++ b/app/views/grounds/show.html.erb
@@ -45,11 +45,8 @@
 
   <pre id="connect_error" class="stderr" hidden="true"><%= t('editor.error.connect') %></pre>
 
-  <div id="output">
-    <pre class="stdout"></pre>
-    <pre class="stderr"></pre>
-    <pre class="status"></pre>
-  </div>
+  <pre class="output"></pre>
+
 </div>
 
 <div class="spaced-row">
