add all themes supported by ace

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -72,8 +72,10 @@ h1, h2, h3, h4, h5, h6 {
 
 .dropdown-items {
   @extend .f-dropdown;
-}
 
+  max-height: rem-calc(400);
+  overflow-y: scroll;
+}
 
 .row {
   @extend .row;
