dropdown scrollbar inherit from parent

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -74,7 +74,7 @@ h1, h2, h3, h4, h5, h6 {
   @extend .f-dropdown;
 
   max-height: rem-calc(400);
-  overflow-y: scroll;
+  overflow-y: inherit;
 }
 
 .row {
