Addition of the team and edit of the footer

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -92,7 +92,6 @@ h1, h2, h3, h4, h5, h6 {
 
 .left-small {
   @extend .left-small;
-
   @include border(right);
 }
 
@@ -108,4 +107,15 @@ h1, h2, h3, h4, h5, h6 {
   @extend .column;
   @extend .panel;
   @extend .radius
+}
+.column-2,
+.column-3 {
+  @extend .columns;
+}
+.column-2 {
+  @extend .large-2;
+}
+
+.column-3 {
+  @extend .large-3;
 }
