Addition of the team and edit of the footer

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,56 +1,72 @@
 <% title t('site.about') %>
 
-  <div class="row">
+<div class="row">
 
-    <div class="medium-panel">
+  <div class="medium-panel">
 
-      <p>
-        Grounds receives a program, compiles and runs the program inside a
-        <%= link_to('Docker', 'http://docker.com/', target: '_blank') %> container,
-        and returns the output. Each container is destroyed after a run.
-      </p>
+    <p>
+      Grounds is an online code snippets compiler, it compiles and runs the code inside a
+      <%= link_to('Docker', 'http://docker.com/', target: '_blank') %> container,
+      and returns the output. Each container is destroyed after a run.
+    </p>
 
-      <p>
-        However Grounds has some limitations:
+    <p>
+      However Grounds has some limitations:
+    <ul>
 
-      <ul>
+      <li>
+        The only communication a grounds program has to the outside world is by writing to
+        standard output and standard error.
+      </li>
 
-        <li>
-          The only communication a grounds program has to the outside world is by writing to
-          standard output and standard error.
-        </li>
+      <li>
+        Grounds doesn't support HTML, CSS and client-side Javascript, and there is no plan to do it
+        in the future. Checkout the awesome <%= link_to('JS Fiddle', 'http://jsfiddle.net/', target: '_blank') %> for
+        that.
+      </li>
 
-        <li>
-          Grounds doesn't support HTML, CSS and client-side Javascript, and there is no plan to do it
-          in the future. Checkout the awesome <%= link_to('JS Fiddle', 'http://jsfiddle.net/', target: '_blank') %> for that.
-        </li>
+    </ul>
 
-      </ul>
+    </p>
 
-      </p>
+    <p>
+      Grounds strives to use the latest stable release of each supported language. If you find
+      that your favorite language is not up to date, you are welcomed to open an issue on
+      <%= link_to('GitHub', 'https://github.com/grounds/grounds.io/issues/new', target: '_blank') %>.
+    </p>
 
-      <p>
-        Grounds strives to use the latest stable release of each supported language. If you find
-        that your favorite language is not up to date, you are welcomed to open an issue on
-        <%= link_to('GitHub', 'https://github.com/grounds/grounds.io/issues/new', target: '_blank') %>.
-      </p>
-
-      <p>
-        Pull requests are also welcomed. There is a lot of documentation on the official
-        <%= link_to('repository', 'https://github.com/grounds/grounds.io', target: '_blank') %> to help
-        new contributors getting started.
-      </p>
-
-    </div>
-
-  <div align="center">
-
-    <%= gravatar_tag('folie.adrien@gmail.com', alt: 'Adrien Folie', class: 'rounded-img') %>
-
-    <h5>ADRIEN FOLIE</h5>
-
-    <%= link_to('www.foliea.io', 'http://www.foliea.io', target: '_blank') %>
+    <p>
+      Pull requests are also welcomed. There is a lot of documentation on the official
+      <%= link_to('repository', 'https://github.com/grounds/grounds.io', target: '_blank') %> to help
+      new contributors getting started.
+    </p>
 
   </div>
 
+</div>
+<div class="row">
+  <h3 class="large-offset-3">The Team:</h3>
+  <div class="large-offset-3 column-2">
+    <%= gravatar_tag("exadeci@gmail.com", alt: 'Gaetan Gueraud', class: 'rounded-img') %>
+    <h5>GAETAN GUERAUD</h5>
+    <h6>Developer</h6>
+    <%= link_to('Github', 'https://github.com/exadeci', target: '_blank') %>
+  </div>
+
+  <div class="column-2">
+    <%= gravatar_tag('folie.adrien@gmail.com', alt: 'Adrien Folie', class: 'rounded-img') %>
+    <h5>ADRIEN FOLIE</h5>
+    <h6>Creator</h6>
+    <%= link_to('www.foliea.io', 'http://www.foliea.io', target: '_blank') %>
+  </div>
+
+  <div class="column-2">
+    <%= gravatar_tag('', alt: 'Thomas Petrachi', class: 'rounded-img') %>
+    <h5>THOMAS PETRACHI</h5>
+    <%= link_to('Github', 'https://github.com/petrachi', target: '_blank') %>
+  </div>
+
+  <div class="column-2">
+
+  </div>
 </div>
